# lista5

./: CMakeLists.txt  constants.h  errorinfo.cpp  errorinfo.h  evaluator.cpp  evaluator.h  expressiontree.cpp  expressiontree.h  main.cpp  processor.cpp  processor.h  refcounter.cpp  refcounter.h  resultholder.h  resultsaver.h  smartpointer.h  treenode.cpp  treenode.h
